[package]
name = "rustling-ontology-ga"
version = "0.19.3"
authors = ["Jim O'Regan <jaoregan@tcd.ie>"]
edition = "2020"

[dependencies]
rustling = { git = "https://github.com/snipsco/rustling", tag = "0.9.1" }
rustling-ontology-moment = { path = "../../moment" }
rustling-ontology-values = { path = "../../values" }
